test/e2e/testdata/.snapshots/TestSetupFailureFlow/Invalid_Private_Key/GET_api_private_ipinfo_1.snaphost
HTTP/2.0 401 Unauthorized
Content-Length: 106
Content-Type: application/json
Date: Mon, 24 Nov 2025 02:55:54 GMT
Server: mdbws
Www-Authenticate: Digest realm="MMS Public API", domain="", nonce="gQovEn5j7I+HlqW45hmay2Ej4k5scVxM", algorithm=MD5, qop="auth", stale=false
X-Xgen-Up-Proto: HTTP/2

{
  "error" : 401,
  "reason" : "Unauthorized",
  "detail" : "You are not authorized for this resource."
}